OPP: Pass rounded rate to _set_opp() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2951,6 +2951,7 @@
 	patches.kernel.org/6.6.15-032-async-Introduce-async_schedule_dev_nocall.patch
 	patches.kernel.org/6.6.15-033-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
 	patches.kernel.org/6.6.15-034-arm64-properly-install-vmlinuz.efi.patch
+	patches.kernel.org/6.6.15-035-OPP-Pass-rounded-rate-to-_set_opp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
