--- a/series.conf
+++ b/series.conf
@@ -3076,6 +3076,7 @@
 	patches.kernel.org/6.6.15-157-bpf-verify-callbacks-as-if-they-are-called-unk.patch
 	patches.kernel.org/6.6.15-158-selftests-bpf-tests-for-iterating-callbacks.patch
 	patches.kernel.org/6.6.15-159-bpf-widening-for-callback-iterators.patch
+	patches.kernel.org/6.6.15-160-selftests-bpf-test-widening-for-iterating-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
