--- a/series.conf
+++ b/series.conf
@@ -3125,6 +3125,7 @@
 	patches.kernel.org/6.6.15-206-netfilter-nf_tables-restrict-anonymous-set-and.patch
 	patches.kernel.org/6.6.15-207-netfilter-nf_tables-validate-NFPROTO_-family.patch
 	patches.kernel.org/6.6.15-208-net-stmmac-Wait-a-bit-for-the-reset-to-take-ef.patch
+	patches.kernel.org/6.6.15-209-net-mvpp2-clear-BM-pool-before-initialization.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
