arm64: dts: qcom: sc8180x: fix USB wakeup interrupt types (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3002,6 +3002,7 @@
 	patches.kernel.org/6.6.15-083-arm64-dts-qcom-sdm845-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-084-arm64-dts-qcom-sdm670-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-085-arm64-dts-qcom-sm8150-fix-USB-wakeup-interrupt.patch
+	patches.kernel.org/6.6.15-086-arm64-dts-qcom-sc8180x-fix-USB-wakeup-interrup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
