selftests: mm: hugepage-vmemmap fails on 64K page size systems (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3040,6 +3040,7 @@
 	patches.kernel.org/6.6.15-121-efi-disable-mirror-feature-during-crashkernel.patch
 	patches.kernel.org/6.6.15-122-ubifs-ubifs_symlink-Fix-memleak-of-inode-i_lin.patch
 	patches.kernel.org/6.6.15-123-kexec-do-syscore_shutdown-in-kernel_kexec.patch
+	patches.kernel.org/6.6.15-124-selftests-mm-hugepage-vmemmap-fails-on-64K-pag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
