drm: Don't unref the same fb many times by mistake due to deadlock handling (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3171,6 +3171,7 @@
 	patches.kernel.org/6.6.15-252-gpiolib-acpi-Ignore-touchpad-wakeup-on-GPD-G16.patch
 	patches.kernel.org/6.6.15-253-cpufreq-intel_pstate-Refine-computation-of-P-s.patch
 	patches.kernel.org/6.6.15-254-Revert-drm-i915-dsi-Do-display-on-sequence-lat.patch
+	patches.kernel.org/6.6.15-255-drm-Don-t-unref-the-same-fb-many-times-by-mist.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
