--- a/series.conf
+++ b/series.conf
@@ -3071,6 +3071,7 @@
 	patches.kernel.org/6.6.15-152-bpf-print-full-verifier-states-on-infinite-loo.patch
 	patches.kernel.org/6.6.15-153-selftests-bpf-track-tcp-payload-offset-as-scal.patch
 	patches.kernel.org/6.6.15-154-selftests-bpf-track-string-payload-offset-as-s.patch
+	patches.kernel.org/6.6.15-155-bpf-extract-__check_reg_arg-utility-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
