--- a/series.conf
+++ b/series.conf
@@ -3222,6 +3222,7 @@
 	patches.kernel.org/6.6.15-303-drm-bridge-sii902x-Fix-probing-race-issue.patch
 	patches.kernel.org/6.6.15-304-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 	patches.kernel.org/6.6.15-305-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
+	patches.kernel.org/6.6.15-306-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
