--- a/series.conf
+++ b/series.conf
@@ -3016,6 +3016,7 @@
 	patches.kernel.org/6.6.15-097-arm64-dts-qcom-sdm670-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-098-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-099-lsm-new-security_file_ioctl_compat-hook.patch
+	patches.kernel.org/6.6.15-100-dlm-use-kernel_connect-and-kernel_bind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
