llc: Drop support for ETH_P_TR_802_2 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3092,6 +3092,7 @@
 	patches.kernel.org/6.6.15-173-bnxt_en-Prevent-kernel-warning-when-running-of.patch
 	patches.kernel.org/6.6.15-174-vlan-skip-nested-type-that-is-not-IFLA_VLAN_QO.patch
 	patches.kernel.org/6.6.15-175-llc-make-llc_ui_sendmsg-more-robust-against-bo.patch
+	patches.kernel.org/6.6.15-176-llc-Drop-support-for-ETH_P_TR_802_2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
