cpufreq: intel_pstate: Refine computation of P-state for given frequency (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3169,6 +3169,7 @@
 	patches.kernel.org/6.6.15-250-drm-amdgpu-Fix-the-null-pointer-when-load-rlc-.patch
 	patches.kernel.org/6.6.15-251-xfs-read-only-mounts-with-fsopen-mount-API-are.patch
 	patches.kernel.org/6.6.15-252-gpiolib-acpi-Ignore-touchpad-wakeup-on-GPD-G16.patch
+	patches.kernel.org/6.6.15-253-cpufreq-intel_pstate-Refine-computation-of-P-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
