--- a/series.conf
+++ b/series.conf
@@ -3070,6 +3070,7 @@
 	patches.kernel.org/6.6.15-151-selftests-bpf-test-if-state-loops-are-detected.patch
 	patches.kernel.org/6.6.15-152-bpf-print-full-verifier-states-on-infinite-loo.patch
 	patches.kernel.org/6.6.15-153-selftests-bpf-track-tcp-payload-offset-as-scal.patch
+	patches.kernel.org/6.6.15-154-selftests-bpf-track-string-payload-offset-as-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
