--- a/series.conf
+++ b/series.conf
@@ -3044,6 +3044,7 @@
 	patches.kernel.org/6.6.15-125-mm-rmap-fix-misplaced-parenthesis-of-a-likely.patch
 	patches.kernel.org/6.6.15-126-mm-sparsemem-fix-race-in-accessing-memory_sect.patch
 	patches.kernel.org/6.6.15-127-rename-fix-the-locking-of-subdirectories.patch
+	patches.kernel.org/6.6.15-128-serial-sc16is7xx-improve-regmap-debugfs-by-usi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
