--- a/series.conf
+++ b/series.conf
@@ -3066,6 +3066,7 @@
 	patches.kernel.org/6.6.15-147-bpf-extract-same_callsites-as-utility-function.patch
 	patches.kernel.org/6.6.15-148-bpf-exact-states-comparison-for-iterator-conve.patch
 	patches.kernel.org/6.6.15-149-selftests-bpf-tests-with-delayed-read-precisio.patch
+	patches.kernel.org/6.6.15-150-bpf-correct-loop-detection-for-iterators-conve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
