--- a/series.conf
+++ b/series.conf
@@ -3197,6 +3197,7 @@
 	patches.kernel.org/6.6.15-278-pipe-wakeup-wr_wait-after-setting-max_usage.patch
 	patches.kernel.org/6.6.15-279-media-v4l-cci-Include-linux-bits.h.patch
 	patches.kernel.org/6.6.15-280-media-v4l-cci-Add-macros-to-obtain-register-wi.patch
+	patches.kernel.org/6.6.15-281-media-v4l2-cci-Add-support-for-little-endian-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
