--- a/series.conf
+++ b/series.conf
@@ -3089,6 +3089,7 @@
 	patches.kernel.org/6.6.15-170-selftests-bonding-Increase-timeout-to-1200s.patch
 	patches.kernel.org/6.6.15-171-tcp-make-sure-init-the-accept_queue-s-spinlock.patch
 	patches.kernel.org/6.6.15-172-bnxt_en-Wait-for-FLR-to-complete-during-probe.patch
+	patches.kernel.org/6.6.15-173-bnxt_en-Prevent-kernel-warning-when-running-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
