--- a/series.conf
+++ b/series.conf
@@ -3132,6 +3132,7 @@
 	patches.kernel.org/6.6.15-213-xsk-make-xsk_buff_pool-responsible-for-clearin.patch
 	patches.kernel.org/6.6.15-214-bpf-Propagate-modified-uaddrlen-from-cgroup-so.patch
 	patches.kernel.org/6.6.15-215-bpf-Add-bpf_sock_addr_set_sun_path-to-allow-wr.patch
+	patches.kernel.org/6.6.15-216-xsk-fix-usage-of-multi-buffer-BPF-helpers-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
