--- a/series.conf
+++ b/series.conf
@@ -3007,6 +3007,7 @@
 	patches.kernel.org/6.6.15-088-arm64-dts-qcom-Add-missing-vio-supply-for-AW20.patch
 	patches.kernel.org/6.6.15-089-ARM-dts-qcom-sdx55-fix-USB-DP-DM-HS-PHY-interr.patch
 	patches.kernel.org/6.6.15-090-arm64-dts-qcom-sdm845-fix-USB-DP-DM-HS-PHY-int.patch
+	patches.kernel.org/6.6.15-091-arm64-dts-qcom-sdm845-fix-USB-SS-wakeup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
