--- a/series.conf
+++ b/series.conf
@@ -3156,6 +3156,7 @@
 	patches.kernel.org/6.6.15-237-btrfs-don-t-abort-filesystem-when-attempting-t.patch
 	patches.kernel.org/6.6.15-238-rbd-don-t-move-requests-to-the-running-list-on.patch
 	patches.kernel.org/6.6.15-239-exec-Fix-error-handling-in-begin_new_exec.patch
+	patches.kernel.org/6.6.15-240-wifi-iwlwifi-fix-a-memory-corruption.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
