--- a/series.conf
+++ b/series.conf
@@ -3087,6 +3087,7 @@
 	patches.kernel.org/6.6.15-168-wifi-mac80211-fix-potential-sta-link-leak.patch
 	patches.kernel.org/6.6.15-169-net-smc-fix-illegal-rmb_desc-access-in-SMC-D-c.patch
 	patches.kernel.org/6.6.15-170-selftests-bonding-Increase-timeout-to-1200s.patch
+	patches.kernel.org/6.6.15-171-tcp-make-sure-init-the-accept_queue-s-spinlock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
