--- a/series.conf
+++ b/series.conf
@@ -2940,6 +2940,7 @@
 	patches.kernel.org/6.6.15-021-cifs-handle-cases-where-a-channel-is-closed.patch
 	patches.kernel.org/6.6.15-022-cifs-reconnect-work-should-have-reference-on-s.patch
 	patches.kernel.org/6.6.15-023-cifs-handle-when-server-starts-supporting-mult.patch
+	patches.kernel.org/6.6.15-024-cifs-handle-when-server-stops-supporting-multi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
