--- a/series.conf
+++ b/series.conf
@@ -3049,6 +3049,7 @@
 	patches.kernel.org/6.6.15-130-serial-sc16is7xx-remove-global-regmap-from-str.patch
 	patches.kernel.org/6.6.15-131-serial-sc16is7xx-remove-unused-line-structure-.patch
 	patches.kernel.org/6.6.15-132-serial-sc16is7xx-change-EFR-lock-to-operate-on.patch
+	patches.kernel.org/6.6.15-133-serial-sc16is7xx-convert-from-_raw_-to-_noinc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
