rcu: Defer RCU kthreads wakeup when CPU is dying (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3120,6 +3120,7 @@
 	patches.kernel.org/6.6.15-201-net-mlx5e-Ignore-IPsec-replay-window-values-on.patch
 	patches.kernel.org/6.6.15-202-net-mlx5e-fix-a-double-free-in-arfs_create_gro.patch
 	patches.kernel.org/6.6.15-203-net-mlx5e-fix-a-potential-double-free-in-fs_an.patch
+	patches.kernel.org/6.6.15-204-rcu-Defer-RCU-kthreads-wakeup-when-CPU-is-dyin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
