--- a/series.conf
+++ b/series.conf
@@ -2936,6 +2936,7 @@
 	patches.kernel.org/6.6.15-017-riscv-Fix-an-off-by-one-in-get_early_cmdline.patch
 	patches.kernel.org/6.6.15-018-scsi-core-Kick-the-requeue-list-after-insertin.patch
 	patches.kernel.org/6.6.15-019-sh-ecovec24-Rename-missed-backlight-field-from.patch
+	patches.kernel.org/6.6.15-020-smb-client-fix-parsing-of-SMB3.1.1-POSIX-creat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
