--- a/series.conf
+++ b/series.conf
@@ -12086,6 +12086,7 @@
 	patches.suse/KEYS-trusted-tee-Refactor-register-SHM-usage.patch
 	patches.suse/integrity-powerpc-Do-not-select-CA_MACHINE_KEYRING.patch
 	patches.suse/keys-Remove-unused-extern-declarations.patch
+	patches.suse/workqueue-Provide-one-lock-class-key-per-work_on_cpu.patch
 	patches.suse/i40e-fix-potential-memory-leaks-in-i40e_remove.patch
 	patches.suse/iavf-Fix-promiscuous-mode-configuration-flow-message.patch
 	patches.suse/vsock-send-SIGPIPE-on-write-to-shutdowned-socket.patch
