--- a/series.conf
+++ b/series.conf
@@ -44815,6 +44815,7 @@
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-to-scom_deb.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-in-opal_eve.patch
 	patches.suse/powerpc-powernv-Add-a-null-pointer-check-in-opal_pow.patch
+	patches.suse/perf-x86-uncore-Use-u64-to-replace-unsigned-for-the-.patch
 	patches.suse/perf-x86-intel-uncore-Fix-NULL-pointer-dereference-issue-in-upi_fill_topology.patch
 	patches.suse/perf-x86-intel-uncore-Factor-out-topology_gidnid_map.patch
 	patches.suse/usb-fsl-mph-dr-of-mark-fsl_usb2_mpc5121_init-static.patch
