--- a/blacklist.conf
+++ b/blacklist.conf
@@ -23,3 +23,12 @@ MAINTAINERS		# We don't care about upstream MAINTAINERS file
 
 # Blacklisted Commits
 # -------------------
+4763d635c907baed212664dc579dde1663bb2676 # only one of two fixes in repo, leaving be for now
+a7565f4d068b2e60f95c3223c3167c40b8fe83ae # no riscv support atm
+72ada8603e36291ad91e4f40f10ef742ef79bc4e # is patches.kernel.org/6.6.11-100-drm-amd-display-*
+a2020be69490ee8778c59a02e7b270dfeecffbd4 # is patches.kernel.org/6.6.8-148-drm-amd-display-*
+4657b3e45683223b5d982ec13a6e2cd367004bb6 # is patches.kernel.org/6.6.7-244-drm-amdgpu-Restrict-*
+71cade82f2b553a74d046c015c986f2df165696f # IMO needs 5790b1fb3d672d9a1fe3881a7181dfdbe741568f
+0dfc852b6fe3cbecbea67332a0dce2bebeba540d # holding back b/c 5790b1fb3d672d9a1fe3881a7181dfdbe741568f
+88903daecacf03b1e5636e1b5f18bda5b07030fc # holding back b/c 5790b1fb3d672d9a1fe3881a7181dfdbe741568f
+6c57d7b593c4a4e60db65d5ce0fe1d9f79ccbe9b # no drivers/firmware/qcom/qcom_qseecom_uefisecapp.c
