firmware: qcom: qseecom: Add missing AUXILIARY_BUS dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3280,6 +3280,7 @@
 	patches.suse/wifi-ath11k-rename-the-sc-naming-convention-to-ab.patch
 	patches.suse/lib-ucs2_string-Add-UCS-2-strscpy-function.patch
 	patches.suse/firmware-qcom_scm-Add-support-for-Qualcomm-Secure-Ex.patch
+	patches.suse/firmware-qcom-qseecom-Add-missing-AUXILIARY_BUS-dependency.patch
 	patches.suse/firmware-Add-support-for-Qualcomm-UEFI-Secure-Applic.patch
 	patches.suse/ALSA-hda-cs35l41-Add-notification-support-into-compo.patch
 	patches.suse/ALSA-hda-realtek-Support-ACPI-Notification-framework.patch
