--- a/series.conf
+++ b/series.conf
@@ -3281,6 +3281,7 @@
 	patches.suse/lib-ucs2_string-Add-UCS-2-strscpy-function.patch
 	patches.suse/firmware-qcom_scm-Add-support-for-Qualcomm-Secure-Ex.patch
 	patches.suse/firmware-qcom-qseecom-Add-missing-AUXILIARY_BUS-dependency.patch
+	patches.suse/firmware-qcom-qseecom-add-missing-include-guards.patch
 	patches.suse/firmware-Add-support-for-Qualcomm-UEFI-Secure-Applic.patch
 	patches.suse/ALSA-hda-cs35l41-Add-notification-support-into-compo.patch
 	patches.suse/ALSA-hda-realtek-Support-ACPI-Notification-framework.patch
