ALSA: usb-audio: Sort quirk table entries (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15742,6 +15742,7 @@
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-fix-typo.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
+	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
