--- a/series.conf
+++ b/series.conf
@@ -15745,6 +15745,7 @@
 	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
+	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
