--- a/series.conf
+++ b/series.conf
@@ -15746,6 +15746,7 @@
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
+	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
