--- a/series.conf
+++ b/series.conf
@@ -15739,6 +15739,7 @@
 	patches.suse/HID-bpf-remove-double-fdget.patch
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
+	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
