--- a/series.conf
+++ b/series.conf
@@ -15743,6 +15743,7 @@
 	patches.suse/ALSA-usb-audio-fix-typo.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
+	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
