ALSA: hda: cs35l56: Initialize all ASP1 registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15755,6 +15755,7 @@
 	patches.suse/ASoC-cs35l56-Remove-buggy-checks-from-cs35l56_is_fw_.patch
 	patches.suse/ASoC-cs35l56-Fix-to-ensure-ASP1-registers-match-cach.patch
 	patches.suse/ASoC-cs35l56-Fix-default-SDW-TX-mixer-registers.patch
+	patches.suse/ALSA-hda-cs35l56-Initialize-all-ASP1-registers.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
