--- a/series.conf
+++ b/series.conf
@@ -15748,6 +15748,7 @@
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
+	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
