--- a/series.conf
+++ b/series.conf
@@ -15754,6 +15754,7 @@
 	patches.suse/ASoC-cs35l56-Don-t-add-the-same-register-patch-multi.patch
 	patches.suse/ASoC-cs35l56-Remove-buggy-checks-from-cs35l56_is_fw_.patch
 	patches.suse/ASoC-cs35l56-Fix-to-ensure-ASP1-registers-match-cach.patch
+	patches.suse/ASoC-cs35l56-Fix-default-SDW-TX-mixer-registers.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
