--- a/series.conf
+++ b/series.conf
@@ -15749,6 +15749,7 @@
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
+	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clear-cs3.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
