--- a/series.conf
+++ b/series.conf
@@ -15751,6 +15751,7 @@
 	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clear-cs3.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clean-up-.patch
+	patches.suse/ASoC-cs35l56-Don-t-add-the-same-register-patch-multi.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
