--- a/series.conf
+++ b/series.conf
@@ -15750,6 +15750,7 @@
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clear-cs3.patch
+	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clean-up-.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
