--- a/series.conf
+++ b/series.conf
@@ -15747,6 +15747,7 @@
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
+	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
