ASoC: cs35l56: Fix misuse of wm_adsp 'part' string for silicon revision (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15759,6 +15759,7 @@
 	patches.suse/ASoC-cs35l56-Fix-default-SDW-TX-mixer-registers.patch
 	patches.suse/ALSA-hda-cs35l56-Initialize-all-ASP1-registers.patch
 	patches.suse/ASoC-cs35l56-Fix-for-initializing-ASP1-mixer-registe.patch
+	patches.suse/ASoC-cs35l56-Fix-misuse-of-wm_adsp-part-string-for-s.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
