Input: bcm5974 - check endpoint type before starting traffic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15766,6 +15766,7 @@
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 	patches.suse/ALSA-hda-cs35l56-Firmware-file-must-match-the-versio.patch
+	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
