ASoC: cs35l56: Allow more time for firmware to boot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15762,6 +15762,7 @@
 	patches.suse/ASoC-cs35l56-Fix-misuse-of-wm_adsp-part-string-for-s.patch
 	patches.suse/ASoC-cs35l56-Firmware-file-must-match-the-version-of.patch
 	patches.suse/ASoC-cs35l56-Load-tunings-for-the-correct-speaker-mo.patch
+	patches.suse/ASoC-cs35l56-Allow-more-time-for-firmware-to-boot.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
