drm/amd/display: Add NULL check for kzalloc in 'amdgpu_dm_atomic_commit_tail()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15770,6 +15770,7 @@
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
 	patches.suse/drm-amd-Don-t-init-MEC2-firmware-when-it-fails-to-lo.patch
+	patches.suse/drm-amd-display-Add-NULL-check-for-kzalloc-in-amdgpu.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
