ASoC: cs35l56: Remove unused hibernate wake constants (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13013,6 +13013,7 @@
 	patches.suse/ASoC-soc-pcm.c-Make-sure-DAI-parameters-cleared-if-t.patch
 	patches.suse/ASoC-doc-Update-codec-to-codec-examples.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Use-size_add-in-call-to-struc.patch
+	patches.suse/ASoC-cs35l56-Remove-unused-hibernate-wake-constants.patch
 	patches.suse/ASoC-codecs-wsa-macro-fix-uninitialized-stack-variab.patch
 	patches.suse/gpiolib-of-Add-quirk-for-mt2701-cs42448-ASoC-sound.patch
 	patches.suse/ASoC-fsl-mpc5200_dma.c-Fix-warning-of-Function-param.patch
