--- a/series.conf
+++ b/series.conf
@@ -15767,6 +15767,7 @@
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 	patches.suse/ALSA-hda-cs35l56-Firmware-file-must-match-the-versio.patch
 	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
+	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
