ALSA: hda: cs35l56: Firmware file must match the version of preloaded firmware (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15765,6 +15765,7 @@
 	patches.suse/ASoC-cs35l56-Allow-more-time-for-firmware-to-boot.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
+	patches.suse/ALSA-hda-cs35l56-Firmware-file-must-match-the-versio.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
