--- a/series.conf
+++ b/series.conf
@@ -13014,6 +13014,7 @@
 	patches.suse/ASoC-doc-Update-codec-to-codec-examples.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Use-size_add-in-call-to-struc.patch
 	patches.suse/ASoC-cs35l56-Remove-unused-hibernate-wake-constants.patch
+	patches.suse/ASoC-cs35l56-Wake-transactions-need-to-be-issued-twi.patch
 	patches.suse/ASoC-codecs-wsa-macro-fix-uninitialized-stack-variab.patch
 	patches.suse/gpiolib-of-Add-quirk-for-mt2701-cs42448-ASoC-sound.patch
 	patches.suse/ASoC-fsl-mpc5200_dma.c-Fix-warning-of-Function-param.patch
