--- a/series.conf
+++ b/series.conf
@@ -15760,6 +15760,7 @@
 	patches.suse/ALSA-hda-cs35l56-Initialize-all-ASP1-registers.patch
 	patches.suse/ASoC-cs35l56-Fix-for-initializing-ASP1-mixer-registe.patch
 	patches.suse/ASoC-cs35l56-Fix-misuse-of-wm_adsp-part-string-for-s.patch
+	patches.suse/ASoC-cs35l56-Firmware-file-must-match-the-version-of.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-order-of-searching-for-firmware.patch
 	patches.suse/ALSA-hda-cs35l56-Fix-filename-string-field-layout.patch
 
