Input: atkbd - do not skip atkbd_deactivate() when skipping ATKBD_CMD_GETID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45054,6 +45054,7 @@
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
+	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
