ASoC: codecs: lpass-wsa-macro: fix compander volume hack (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45050,6 +45050,7 @@
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
+	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
