Input: bcm5974 - check endpoint type before starting traffic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45052,6 +45052,7 @@
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
+	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
