--- a/series.conf
+++ b/series.conf
@@ -45047,6 +45047,7 @@
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
+	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
