--- a/series.conf
+++ b/series.conf
@@ -45046,6 +45046,7 @@
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
+	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
