--- a/series.conf
+++ b/series.conf
@@ -45044,6 +45044,7 @@
 	patches.suse/drm-bridge-anx7625-Ensure-bridge-is-suspended-in-dis.patch
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
+	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
