HID: i2c-hid-of: fix NULL-deref on failed power up (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45045,6 +45045,7 @@
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
+	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
