--- a/series.conf
+++ b/series.conf
@@ -45049,6 +45049,7 @@
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
+	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
