--- a/series.conf
+++ b/series.conf
@@ -45053,6 +45053,7 @@
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
+	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
