--- a/series.conf
+++ b/series.conf
@@ -15784,6 +15784,7 @@
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
 	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
+	patches.suse/Revert-usb-typec-tcpm-fix-cc-role-at-port-reset.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
