--- a/series.conf
+++ b/series.conf
@@ -15775,6 +15775,7 @@
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
 	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
+	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the-.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
