--- a/series.conf
+++ b/series.conf
@@ -15789,6 +15789,7 @@
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.suse/usb-typec-tcpm-fix-the-PD-disabled-case.patch
+	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
