--- a/series.conf
+++ b/series.conf
@@ -15787,6 +15787,7 @@
 	patches.suse/Revert-usb-typec-tcpm-fix-cc-role-at-port-reset.patch
 	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
+	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
