usb: ulpi: Fix debugfs directory leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15785,6 +15785,7 @@
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
 	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
 	patches.suse/Revert-usb-typec-tcpm-fix-cc-role-at-port-reset.patch
+	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
