usb: host: xhci-plat: Add support for XHCI_SG_TRB_CACHE_SIZE_QUIRK (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15778,6 +15778,7 @@
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the-.patch
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the--3aa58cb.patch
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
+	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
