phy: renesas: rcar-gen3-usb2: Fix returning wrong error code (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15771,6 +15771,7 @@
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
 	patches.suse/drm-amd-Don-t-init-MEC2-firmware-when-it-fails-to-lo.patch
 	patches.suse/drm-amd-display-Add-NULL-check-for-kzalloc-in-amdgpu.patch
+	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
