usb: dwc3: gadget: Fix NULL pointer dereference in dwc3_gadget_suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15781,6 +15781,7 @@
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
+	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
