--- a/series.conf
+++ b/series.conf
@@ -15779,6 +15779,7 @@
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the--3aa58cb.patch
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
+	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
