usb: core: Prevent null pointer dereference in update_port_device_state (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15780,6 +15780,7 @@
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
+	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
