--- a/series.conf
+++ b/series.conf
@@ -15783,6 +15783,7 @@
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
+	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
