--- a/series.conf
+++ b/series.conf
@@ -15793,6 +15793,7 @@
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/serial-max310x-prevent-infinite-while-loop-in-port-s.patch
+	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
