usb: ucsi: Add missing ppm_lock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15786,6 +15786,7 @@
 	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
 	patches.suse/Revert-usb-typec-tcpm-fix-cc-role-at-port-reset.patch
 	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
+	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
