dmaengine: fix is_slave_direction() return false when DMA_DEV_TO_DEV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15777,6 +15777,7 @@
 	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the-.patch
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the--3aa58cb.patch
+	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
