--- a/series.conf
+++ b/series.conf
@@ -15791,6 +15791,7 @@
 	patches.suse/usb-typec-tcpm-fix-the-PD-disabled-case.patch
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
+	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
