--- a/series.conf
+++ b/series.conf
@@ -15792,6 +15792,7 @@
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
+	patches.suse/serial-max310x-prevent-infinite-while-loop-in-port-s.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
