--- a/series.conf
+++ b/series.conf
@@ -15788,6 +15788,7 @@
 	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
+	patches.suse/usb-typec-tcpm-fix-the-PD-disabled-case.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
