--- a/series.conf
+++ b/series.conf
@@ -15757,6 +15757,7 @@
 	patches.suse/ASoC-qcom-sc8280xp-limit-speaker-volumes.patch
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
+	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-MSI-Bravo-15-C7VF.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
 	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clear-cs3.patch
