--- a/series.conf
+++ b/series.conf
@@ -15759,6 +15759,7 @@
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-MSI-Bravo-15-C7VF.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
+	patches.suse/ALSA-hda-realtek-Enable-headset-mic-on-Vaio-VJFE-ADL.patch
 	patches.suse/ASoC-wm_adsp-Fix-firmware-file-search-order.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clear-cs3.patch
 	patches.suse/ASoC-cs35l56-cs35l56_component_remove-must-clean-up-.patch
