ALSA: hda/realtek: Apply headset jack quirk for non-bass alc287 thinkpads (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15751,6 +15751,7 @@
 	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.suse/ALSA-hda-realtek-Fix-the-external-mic-not-being-reco.patch
 	patches.suse/ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-14-fq0.patch
+	patches.suse/ALSA-hda-realtek-Apply-headset-jack-quirk-for-non-ba.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
