--- a/series.conf
+++ b/series.conf
@@ -15744,6 +15744,7 @@
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-ZBook-.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
+	patches.suse/ALSA-hda-realtek-Add-speaker-pin-verbtable-for-Dell-.patch
 	patches.suse/ALSA-usb-audio-fix-typo.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
