ASoC: qcom: sc8280xp: limit speaker volumes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15754,6 +15754,7 @@
 	patches.suse/ALSA-hda-realtek-Apply-headset-jack-quirk-for-non-ba.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
+	patches.suse/ASoC-qcom-sc8280xp-limit-speaker-volumes.patch
 	patches.suse/ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
 	patches.suse/ASoC-sun4i-spdif-Fix-requirements-for-H6.patch
