--- a/series.conf
+++ b/series.conf
@@ -15741,6 +15741,7 @@
 	patches.suse/HID-bpf-remove-double-fdget.patch
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
+	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-ZBook-.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-fix-typo.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
