ALSA: usb-audio: Add delay quirk for MOTU M Series 2nd revision (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15746,6 +15746,7 @@
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-pin-verbtable-for-Dell-.patch
 	patches.suse/ALSA-usb-audio-fix-typo.patch
+	patches.suse/ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Series-2nd.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
