--- a/series.conf
+++ b/series.conf
@@ -45058,6 +45058,7 @@
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
+	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
