usb: host: xhci-plat: Add support for XHCI_SG_TRB_CACHE_SIZE_QUIRK (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45061,6 +45061,7 @@
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
 	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
+	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
