phy: ti: phy-omap-usb2: Fix NULL pointer dereference for SRP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45057,6 +45057,7 @@
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
+	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
