--- a/series.conf
+++ b/series.conf
@@ -45064,6 +45064,7 @@
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
+	patches.suse/serial-core-Fix-atomicity-violation-in-uart_tiocmget.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
