serial: max310x: improve crystal stable clock detection (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45066,6 +45066,7 @@
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.suse/serial-core-Fix-atomicity-violation-in-uart_tiocmget.patch
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
+	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
