--- a/series.conf
+++ b/series.conf
@@ -45068,6 +45068,7 @@
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
+	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
