dmaengine: idxd: Protect int_handle field in hw descriptor (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44701,6 +44701,7 @@
 	patches.suse/ring-buffer-Do-not-record-in-NMI-if-the-arch-does-not-support-cmpxchg-in-NMI.patch
 	patches.suse/clk-rockchip-rk3128-Fix-HCLK_OTG-gate-register.patch
 	patches.suse/powerpc-pseries-vas-Migration-suspend-waits-for-no-i.patch
+	patches.suse/dmaengine-idxd-Protect-int_handle-field-in-hw-descri.patch
 	patches.suse/soundwire-stream-fix-NULL-pointer-dereference-for-mu.patch
 	patches.suse/perf-Fix-perf_event_validate_size-lockdep-splat.patch
 	patches.suse/spi-atmel-Fix-clock-issue-when-using-devices-with-di.patch
