dmaengine: ti: k3-udma: Report short packet errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45059,6 +45059,7 @@
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
+	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
