--- a/series.conf
+++ b/series.conf
@@ -45056,6 +45056,7 @@
 	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
+	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
