--- a/series.conf
+++ b/series.conf
@@ -45062,6 +45062,7 @@
 	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
+	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
