--- a/series.conf
+++ b/series.conf
@@ -45067,6 +45067,7 @@
 	patches.suse/serial-core-Fix-atomicity-violation-in-uart_tiocmget.patch
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
+	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
