dmaengine: fix is_slave_direction() return false when DMA_DEV_TO_DEV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45060,6 +45060,7 @@
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
 	patches.suse/dmaengine-ti-k3-udma-Report-short-packet-errors.patch
+	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
