--- a/series.conf
+++ b/series.conf
@@ -45065,6 +45065,7 @@
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.suse/serial-core-Fix-atomicity-violation-in-uart_tiocmget.patch
+	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
