--- a/series.conf
+++ b/series.conf
@@ -15661,6 +15661,7 @@
 	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
 	patches.suse/tracing-Ensure-visibility-when-inserting-an-element-into-tracing_map.patch
 	patches.suse/exec-Fix-error-handling-in-begin_new_exec.patch
+	patches.suse/afs-Hide-silly-rename-files-from-userspace.patch
 	patches.suse/selftests-bonding-Increase-timeout-to-1200s.patch
 	patches.suse/bnxt_en-Wait-for-FLR-to-complete-during-probe.patch
 	patches.suse/bnxt_en-Fix-memory-leak-in-bnxt_hwrm_get_rings.patch
