--- a/series.conf
+++ b/series.conf
@@ -8162,6 +8162,7 @@
 	patches.suse/maple_tree-fix-a-few-documentation-issues.patch
 	patches.suse/mm-mm_init.c-update-obsolete-comment-in-get_pfn_range_for_nid.patch
 	patches.suse/mm-filemap.c-fix-update-prev_pos-after-one-read-request-done.patch
+	patches.suse/maple_tree-add-test-for-mas_wr_modify-fast-path.patch
 	patches.suse/mm-page_alloc-fix-min_free_kbytes-calculation-regarding-ZONE_MOVABLE.patch
 	patches.suse/mm-page_alloc-use-write_seqlock_irqsave-instead-write_seqlock-local_irq_save.patch
 	patches.suse/mm-page_alloc-avoid-false-page-outside-zone-error-info.patch
