--- a/series.conf
+++ b/series.conf
@@ -8176,6 +8176,7 @@
 	patches.suse/HWPOISON-offline-support-fix-spelling-in-Documentati.patch
 	patches.suse/maple_tree-don-t-use-MAPLE_ARANGE64_META_MAX-to-indi.patch
 	patches.suse/maple_tree-make-mas_validate_gaps-to-check-metadata.patch
+	patches.suse/maple_tree-fix-mas_validate_child_slot-to-check-last.patch
 	patches.suse/lib-test_meminit-allocate-pages-up-to-order-MAX_ORDE.patch
 	patches.suse/mm-mm_init.c-drop-node_start_pfn-from-adjust_zone_range_for_zone_movable.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
