maple_tree: don't use MAPLE_ARANGE64_META_MAX to indicate no gap (bsc#1219558).

--- a/series.conf
+++ b/series.conf
@@ -8174,6 +8174,7 @@
 	patches.suse/mm-compaction-skip-the-memory-hole-rapidly-when-isolating-free-pages.patch
 	patches.suse/mm-hugetlb_vmemmap-fix-a-race-between-vmemmap-pmd-sp.patch
 	patches.suse/HWPOISON-offline-support-fix-spelling-in-Documentati.patch
+	patches.suse/maple_tree-don-t-use-MAPLE_ARANGE64_META_MAX-to-indi.patch
 	patches.suse/lib-test_meminit-allocate-pages-up-to-order-MAX_ORDE.patch
 	patches.suse/mm-mm_init.c-drop-node_start_pfn-from-adjust_zone_range_for_zone_movable.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
