maple_tree: fix a few documentation issues (bsc#1219558).

--- a/series.conf
+++ b/series.conf
@@ -8159,6 +8159,7 @@
 	patches.suse/ethernet-tg3-remove-unreachable-code.patch
 	patches.suse/r8169-fix-ASPM-related-issues-on-a-number-of-systems.patch
 	patches.suse/mm-madvise-fix-uneven-accounting-of-psi.patch
+	patches.suse/maple_tree-fix-a-few-documentation-issues.patch
 	patches.suse/mm-mm_init.c-update-obsolete-comment-in-get_pfn_range_for_nid.patch
 	patches.suse/mm-filemap.c-fix-update-prev_pos-after-one-read-request-done.patch
 	patches.suse/mm-page_alloc-fix-min_free_kbytes-calculation-regarding-ZONE_MOVABLE.patch
