--- a/series.conf
+++ b/series.conf
@@ -8194,6 +8194,7 @@
 	patches.suse/mm-compaction-avoid-unneeded-pageblock_end_pfn-when-no_set_skip_hint-is-set.patch
 	patches.suse/mm-don-t-drop-VMA-locks-in-mm_drop_all_locks.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_for_each.patch
+	patches.suse/maple_tree-add-benchmarking-for-mas_prev.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
 	patches.suse/mm-page_alloc-avoid-unneeded-alike_pages-calculation.patch
 	patches.suse/mm-vmscan-fix-inaccurate-reclaim-during-proactive-reclaim.patch
