--- a/series.conf
+++ b/series.conf
@@ -8184,6 +8184,7 @@
 	patches.suse/lib-test_meminit-allocate-pages-up-to-order-MAX_ORDE.patch
 	patches.suse/mm-mm_init.c-drop-node_start_pfn-from-adjust_zone_range_for_zone_movable.patch
 	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr.patch
+	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr-4ae6944.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
 	patches.suse/arm64-smmu-use-TLBI-ASID-when-invalidating-entire-range.patch
 	patches.suse/mm-compaction-correct-comment-of-candidate-pfn-in-fast_isolate_freepages.patch
