maple_tree: introduce __mas_set_range() (bsc#1219558).

--- a/series.conf
+++ b/series.conf
@@ -8195,6 +8195,7 @@
 	patches.suse/mm-don-t-drop-VMA-locks-in-mm_drop_all_locks.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_for_each.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_prev.patch
+	patches.suse/maple_tree-introduce-__mas_set_range.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
 	patches.suse/mm-page_alloc-avoid-unneeded-alike_pages-calculation.patch
 	patches.suse/mm-vmscan-fix-inaccurate-reclaim-during-proactive-reclaim.patch
