--- a/series.conf
+++ b/series.conf
@@ -8180,6 +8180,7 @@
 	patches.suse/maple_tree-make-mas_validate_limits-check-root-node-.patch
 	patches.suse/maple_tree-update-mt_validate.patch
 	patches.suse/maple_tree-replace-mas_logical_pivot-with-mas_safe_p.patch
+	patches.suse/maple_tree-drop-mas_first_entry.patch
 	patches.suse/lib-test_meminit-allocate-pages-up-to-order-MAX_ORDE.patch
 	patches.suse/mm-mm_init.c-drop-node_start_pfn-from-adjust_zone_range_for_zone_movable.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
