--- a/series.conf
+++ b/series.conf
@@ -8187,6 +8187,7 @@
 	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr-4ae6944.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
 	patches.suse/maple_tree-relax-lockdep-checks-for-on-stack-trees.patch
+	patches.suse/mm-mmap-change-detached-vma-locking-scheme.patch
 	patches.suse/arm64-smmu-use-TLBI-ASID-when-invalidating-entire-range.patch
 	patches.suse/mm-compaction-correct-comment-of-candidate-pfn-in-fast_isolate_freepages.patch
 	patches.suse/mm-compaction-avoid-unneeded-pageblock_end_pfn-when-no_set_skip_hint-is-set.patch
