--- a/series.conf
+++ b/series.conf
@@ -8198,6 +8198,7 @@
 	patches.suse/maple_tree-introduce-__mas_set_range.patch
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
+	patches.suse/maple_tree-move-mas_wr_end_piv-below-mas_wr_extend_n.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
 	patches.suse/mm-page_alloc-avoid-unneeded-alike_pages-calculation.patch
 	patches.suse/mm-vmscan-fix-inaccurate-reclaim-during-proactive-reclaim.patch
