--- a/series.conf
+++ b/series.conf
@@ -11706,6 +11706,7 @@
 	patches.suse/Revert-tty-n_gsm-fix-UAF-in-gsm_cleanup_mux.patch
 	patches.suse/misc-rtsx-Fix-some-platforms-can-not-boot-and-move-t.patch
 	patches.suse/nilfs2-fix-potential-use-after-free-in-nilfs_gccache.patch
+	patches.suse/maple_tree-add-mas_is_active-to-detect-in-tree-walks.patch
 	patches.suse/mm-memcg-reconsider-kmem.limit_in_bytes-deprecation.patch
 	patches.suse/mm-mempolicy-keep-VMA-walk-if-both-MPOL_MF_STRICT-and-MPOL_MF_MOVE-are-specified.patch
 	patches.suse/selftests-mm-fix-awk-usage-in-charge_reserved_hugetl.patch
