ceph_wait_on_conflict_unlink(): grab reference before dropping ->d_lock (bsc#1219566).

--- a/series.conf
+++ b/series.conf
@@ -11943,6 +11943,7 @@
 	patches.suse/io_uring-fdinfo-lock-SQ-thread-while-retrieving-thre.patch
 	patches.suse/io_uring-rw-disable-IOCB_DIO_CALLER_COMP.patch
 	patches.suse/io_uring-kiocb_done-should-not-trust-ki_pos-if-read-.patch
+	patches.suse/ceph_wait_on_conflict_unlink-grab-reference-before-dr.patch
 	patches.suse/clk-Sanitize-possible_parent_show-to-Handle-Return-V.patch
 	patches.suse/i2c-aspeed-Fix-i2c-bus-hang-in-slave-read.patch
 	patches.suse/i2c-muxes-i2c-mux-pinctrl-Use-of_get_i2c_adapter_by_.patch
