scsi: lpfc: Update lpfc version to 14.2.0.17 (bsc#1219582).

--- a/series.conf
+++ b/series.conf
@@ -15218,6 +15218,7 @@
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.17.patch
 	patches.suse/scripts-kernel-doc-restore-warning-for-Excess-struct.patch
 	patches.suse/scripts-get_abi-fix-source-path-leak.patch
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
