nvme-rdma: Fix transfer length when write_generate/read_verify are 0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45049,6 +45049,7 @@
 	patches.suse/drm-bridge-anx7625-Ensure-bridge-is-suspended-in-dis.patch
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
+	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
