nvme: blank out authentication fabrics options if not configured (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13981,6 +13981,7 @@
 	patches.suse/nvme-auth-set-explanation-code-for-failure2-msgs.patch
 	patches.suse/nvme-tcp-only-evaluate-tls-option-if-TLS-is-selected.patch
 	patches.suse/nvme-catch-errors-from-nvme_configure_metadata.patch
+	patches.suse/nvme-blank-out-authentication-fabrics-options-if-not.patch
 	patches.suse/nvmet-nul-terminate-the-NQNs-passed-in-the-connect-c.patch
 	patches.suse/nvmet-tcp-always-initialize-tls_handshake_tmo_work.patch
 	patches.suse/nvme-move-nvme_stop_keep_alive-back-to-original-posi.patch
