mm/mmap: move vma operations to mm_struct out of the critical section of file mapping lock (bsc#1219558).

--- a/series.conf
+++ b/series.conf
@@ -8181,6 +8181,7 @@
 	patches.suse/maple_tree-update-mt_validate.patch
 	patches.suse/maple_tree-replace-mas_logical_pivot-with-mas_safe_p.patch
 	patches.suse/maple_tree-drop-mas_first_entry.patch
+	patches.suse/mm-mmap-move-vma-operations-to-mm_struct-out-of-the-critical-section-of-file-mapping-lock.patch
 	patches.suse/lib-test_meminit-allocate-pages-up-to-order-MAX_ORDE.patch
 	patches.suse/mm-mm_init.c-drop-node_start_pfn-from-adjust_zone_range_for_zone_movable.patch
 	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr.patch
