- mm/mmap: clean up validate_mm() calls (bsc#1219558). - Refresh patches.suse/mm-re-introduce-vm_flags-to-do_mmap.patch.

--- a/series.conf
+++ b/series.conf
@@ -8187,6 +8187,7 @@
 	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr.patch
 	patches.suse/maple_tree-mtree_insert-fix-typo-in-kernel-doc-descr-4ae6944.patch
 	patches.suse/mm-rmap-correct-stale-comment-of-rmap_walk_anon-and-rmap_walk_file.patch
+	patches.suse/mm-mmap-clean-up-validate_mm-calls.patch
 	patches.suse/maple_tree-relax-lockdep-checks-for-on-stack-trees.patch
 	patches.suse/mm-mmap-change-detached-vma-locking-scheme.patch
 	patches.suse/maple_tree-Be-more-strict-about-locking.patch
