mm: change do_vmi_align_munmap() tracking of VMAs to remove (bsc#1219558).

--- a/series.conf
+++ b/series.conf
@@ -8197,6 +8197,7 @@
 	patches.suse/mm-don-t-drop-VMA-locks-in-mm_drop_all_locks.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_for_each.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_prev.patch
+	patches.suse/mm-change-do_vmi_align_munmap-tracking-of-VMAs-to-remove.patch
 	patches.suse/maple_tree-introduce-__mas_set_range.patch
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
