media: rkisp1: resizer: Stop manual allocation of v4l2_subdev_state (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3431,6 +3431,7 @@
 	patches.kernel.org/6.6.16-180-media-rkisp1-Fix-IRQ-handler-return-values.patch
 	patches.kernel.org/6.6.16-181-media-rkisp1-Store-IRQ-lines.patch
 	patches.kernel.org/6.6.16-182-media-rkisp1-Fix-IRQ-disable-race-issue.patch
+	patches.kernel.org/6.6.16-183-media-rkisp1-resizer-Stop-manual-allocation-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
