drm/amdgpu: fix ftrace event amdgpu_bo_move always move on same heap (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3447,6 +3447,7 @@
 	patches.kernel.org/6.6.16-196-drm-msm-dpu-enable-writeback-on-SM8450.patch
 	patches.kernel.org/6.6.16-197-drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
 	patches.kernel.org/6.6.16-198-drm-msm-dpu-fix-writeback-programming-for-YUV-.patch
+	patches.kernel.org/6.6.16-199-drm-amdgpu-fix-ftrace-event-amdgpu_bo_move-alw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
