pds_core: Prevent race issues involving the adminq (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3548,6 +3548,7 @@
 	patches.kernel.org/6.6.16-297-pds_core-Cancel-AQ-work-on-teardown.patch
 	patches.kernel.org/6.6.16-298-pds_core-Use-struct-pdsc-for-the-pdsc_adminq_i.patch
 	patches.kernel.org/6.6.16-299-pds_core-implement-pci-reset-handlers.patch
+	patches.kernel.org/6.6.16-300-pds_core-Prevent-race-issues-involving-the-adm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
