drm/amd/display: Fix minor issues in BW Allocation Phase2 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3457,6 +3457,7 @@
 	patches.kernel.org/6.6.16-206-drm-amd-display-Only-clear-symclk-otg-flag-for.patch
 	patches.kernel.org/6.6.16-207-clk-imx-clk-imx8qxp-fix-LVDS-bypass-pixel-and-.patch
 	patches.kernel.org/6.6.16-208-drm-amdgpu-Fix-ecc-irq-enable-disable-unpaired.patch
+	patches.kernel.org/6.6.16-209-drm-amd-display-Fix-minor-issues-in-BW-Allocat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
