soc: xilinx: fix unhandled SGI warning message (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3318,6 +3318,7 @@
 	patches.kernel.org/6.6.16-067-ARM-dts-qcom-mdm9615-fix-PMIC-node-labels.patch
 	patches.kernel.org/6.6.16-068-ARM-dts-qcom-msm8660-fix-PMIC-node-labels.patch
 	patches.kernel.org/6.6.16-069-soc-xilinx-Fix-for-call-trace-due-to-the-usage.patch
+	patches.kernel.org/6.6.16-070-soc-xilinx-fix-unhandled-SGI-warning-message.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
