bonding: remove print in bond_verify_device_path (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3567,6 +3567,7 @@
 	patches.kernel.org/6.6.16-316-drm-msm-dsi-Enable-runtime-PM.patch
 	patches.kernel.org/6.6.16-317-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
 	patches.kernel.org/6.6.16-318-selftests-bpf-Remove-flaky-test_btf_id-test.patch
+	patches.kernel.org/6.6.16-319-bonding-remove-print-in-bond_verify_device_pat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
