ext4: unify the type of flexbg_size to unsigned int (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3303,6 +3303,7 @@
 	patches.kernel.org/6.6.16-052-smb-client-fix-hardlinking-of-reparse-points.patch
 	patches.kernel.org/6.6.16-053-ecryptfs-Reject-casefold-directory-inodes.patch
 	patches.kernel.org/6.6.16-054-ext4-fix-inconsistent-between-segment-fstrim-a.patch
+	patches.kernel.org/6.6.16-055-ext4-unify-the-type-of-flexbg_size-to-unsigned.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
