drm/amdgpu: Fix with right return code '-EIO' in 'amdgpu_gmc_vram_checking()' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3501,6 +3501,7 @@
 	patches.kernel.org/6.6.16-250-ceph-fix-invalid-pointer-access-if-get_quota_r.patch
 	patches.kernel.org/6.6.16-251-drm-amdgpu-fix-avg-vs-input-power-reporting-on.patch
 	patches.kernel.org/6.6.16-252-drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_T.patch
+	patches.kernel.org/6.6.16-253-drm-amdgpu-Fix-with-right-return-code-EIO-in-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
