FS:JFS:UBSAN:array-index-out-of-bounds in dbAdjTree (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3274,6 +3274,7 @@
 	patches.kernel.org/6.6.16-023-PM-devfreq-Synchronize-devfreq_monitor_-start-.patch
 	patches.kernel.org/6.6.16-024-ACPI-APEI-set-memory-failure-flags-as-MF_ACTIO.patch
 	patches.kernel.org/6.6.16-025-thermal-core-Fix-thermal-zone-suspend-resume-s.patch
+	patches.kernel.org/6.6.16-026-FS-JFS-UBSAN-array-index-out-of-bounds-in-dbAd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
