selftests/bpf: fix compiler warnings in RELEASE=1 mode (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3368,6 +3368,7 @@
 	patches.kernel.org/6.6.16-117-block-rnbd-srv-Check-for-unlikely-string-overf.patch
 	patches.kernel.org/6.6.16-118-arm64-zynqmp-Move-fixed-clock-to-for-kv260.patch
 	patches.kernel.org/6.6.16-119-arm64-zynqmp-Fix-clock-node-name-in-kv260-card.patch
+	patches.kernel.org/6.6.16-120-selftests-bpf-fix-compiler-warnings-in-RELEASE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
