selftests: net: don't access /dev/stdout in pmtu.sh (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3554,6 +3554,7 @@
 	patches.kernel.org/6.6.16-303-selftests-net-add-missing-config-for-nftables-.patch
 	patches.kernel.org/6.6.16-304-selftests-net-add-missing-config-for-pmtu.sh-t.patch
 	patches.kernel.org/6.6.16-305-selftests-net-fix-available-tunnels-detection.patch
+	patches.kernel.org/6.6.16-306-selftests-net-don-t-access-dev-stdout-in-pmtu..patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
