Bluetooth: L2CAP: Fix possible multiple reject send (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3395,6 +3395,7 @@
 	patches.kernel.org/6.6.16-144-Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_.patch
 	patches.kernel.org/6.6.16-145-Bluetooth-ISO-Avoid-creating-child-socket-if-P.patch
 	patches.kernel.org/6.6.16-146-Bluetooth-hci_sync-fix-BR-EDR-wakeup-bug.patch
+	patches.kernel.org/6.6.16-147-Bluetooth-L2CAP-Fix-possible-multiple-reject-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
