ecryptfs: Reject casefold directory inodes (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3301,6 +3301,7 @@
 	patches.kernel.org/6.6.16-050-ext4-treat-end-of-range-as-exclusive-in-ext4_z.patch
 	patches.kernel.org/6.6.16-051-smb-client-fix-renaming-of-reparse-points.patch
 	patches.kernel.org/6.6.16-052-smb-client-fix-hardlinking-of-reparse-points.patch
+	patches.kernel.org/6.6.16-053-ecryptfs-Reject-casefold-directory-inodes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
