wifi: ath11k: fix race due to setting ATH11K_FLAG_EXT_IRQ_ENABLED too early (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3334,6 +3334,7 @@
 	patches.kernel.org/6.6.16-083-ARM-dts-imx7s-Fix-nand-controller-size-cells.patch
 	patches.kernel.org/6.6.16-084-bpf-Fix-a-few-selftest-failures-due-to-llvm18-.patch
 	patches.kernel.org/6.6.16-085-wifi-ath9k-Fix-potential-array-index-out-of-bo.patch
+	patches.kernel.org/6.6.16-086-wifi-ath11k-fix-race-due-to-setting-ATH11K_FLA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
