fast_dput(): handle underflows gracefully (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3407,6 +3407,7 @@
 	patches.kernel.org/6.6.16-156-f2fs-fix-to-check-return-value-of-f2fs_reserve.patch
 	patches.kernel.org/6.6.16-157-ALSA-hda-Refer-to-correct-stream-index-at-loop.patch
 	patches.kernel.org/6.6.16-158-ASoC-doc-Fix-undefined-SND_SOC_DAPM_NOPM-argum.patch
+	patches.kernel.org/6.6.16-159-fast_dput-handle-underflows-gracefully.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
