jfs: fix slab-out-of-bounds Read in dtSearch (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3276,6 +3276,7 @@
 	patches.kernel.org/6.6.16-025-thermal-core-Fix-thermal-zone-suspend-resume-s.patch
 	patches.kernel.org/6.6.16-026-FS-JFS-UBSAN-array-index-out-of-bounds-in-dbAd.patch
 	patches.kernel.org/6.6.16-027-UBSAN-array-index-out-of-bounds-in-dtSplitRoot.patch
+	patches.kernel.org/6.6.16-028-jfs-fix-slab-out-of-bounds-Read-in-dtSearch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
